GH-3886 switch to List.of(...) which is faster and leaner than Arrays.asList